--- a/faraday_probe.html
+++ b/faraday_probe.html
@@ -48,7 +48,7 @@
       </p>
     </div>
     <div>
-      <figure>
+      <figure class="text-center">
         <img class="resizing-image" src="img/faraday_probe/Faraday_Probe.png" />
         <figcaption>Faraday Probe. Coin for scale.
           <br>
@@ -65,7 +65,7 @@
         location.
         <sup><a href="/references.html">[2]</a></sup>
       </p>
-      <figure>
+      <figure class="text-center">
         <img class="resizing-image" src="img/faraday_probe/Probe_Diagram.png" />
         <figcaption>Diagram of the Faraday Probe components</ /figcaption>
           <br>
