--- a/retarding_analyzer.html
+++ b/retarding_analyzer.html
@@ -52,7 +52,7 @@
 			</p>
 		</div>
 		<div>
-			<figure>
+			<figure class="text-center">
 				<img class="resizing-image" src="img/rpa/RPA.png" />
 				<figcaption>example side-view of the retarding probe analyzer
 					<br>
