--- a/rpa-simulation.html
+++ b/rpa-simulation.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>RPA Visualization</title>
   <script src="https://cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js" crossorigin="anonymous"></script>
-  <link rel="shortcut icon" href="UnityAnimations/TemplateData/favicon.ico">
+  <link rel="icon" type="image/svg+xml" href="img/logo/Psyche_Icon_BW-SVG.svg">
   <link rel="stylesheet" href="UnityAnimations/TemplateData/style.css">
   <script src="js/rpa-vis.js"></script>
 </head>
