--- a/faraday-simulation.html
+++ b/faraday-simulation.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Faraday Probe Visualization</title>
-  <link rel="shortcut icon" href="UnityAnimations/TemplateData/favicon.ico">
+  <link rel="icon" type="image/svg+xml" href="img/logo/Psyche_Icon_BW-SVG.svg">  
   <link rel="stylesheet" href="UnityAnimations/TemplateData/style.css">
   <script src="https://cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js" crossorigin="anonymous"></script>
   <script src="js/faraday-vis.js"></script>
